GPencil: Array modifier constant offset works even if disabled if object offset is enabled #95923

Closed
opened 2022-02-21 10:39:00 +01:00 by takaaki takeda · 6 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-15 19:40, hash: 53fe4f62fe
Worked: (newest version of Blender that worked as expected)

Short description of error
If Object offset is enabled in array modifier for grease pencil,
Constant Offset parameter affects its result even if Constant Offset is disabled.

I made a gif animation.
ArrayModifierTest.gif
Here I made Mesh Suzanne with Array Modifier and Grease Pencil Suzanne with Array Modifier.
Both Constant Offset and Object Offset is enabled.
In Mesh Suzanne, when constant offset is disabled, it effect is turned off.
However, In Grease Pencil Suzanne, Constant Offset parameter affects the result even if Constant Offset is disabled.

Exact steps for others to reproduce the error
1 Make grease pencil object and empty as control object.
2 Set Array modifier to grease pencil, and enable both constant offset and object offset, and set proper offset parameters.
3 Disable Constant Offset. However, the effect of Constant Offset remains.

I uploaded .blend file I have used to make gif animation above.
ArrayModifierTest.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-15 19:40, hash: `53fe4f62fe` Worked: (newest version of Blender that worked as expected) **Short description of error** If Object offset is enabled in array modifier for grease pencil, Constant Offset parameter affects its result even if Constant Offset is disabled. I made a gif animation. ![ArrayModifierTest.gif](https://archive.blender.org/developer/F12880210/ArrayModifierTest.gif) Here I made Mesh Suzanne with Array Modifier and Grease Pencil Suzanne with Array Modifier. Both Constant Offset and Object Offset is enabled. In Mesh Suzanne, when constant offset is disabled, it effect is turned off. However, In Grease Pencil Suzanne, Constant Offset parameter affects the result even if Constant Offset is disabled. **Exact steps for others to reproduce the error** 1 Make grease pencil object and empty as control object. 2 Set Array modifier to grease pencil, and enable both constant offset and object offset, and set proper offset parameters. 3 Disable Constant Offset. However, the effect of Constant Offset remains. I uploaded .blend file I have used to make gif animation above. [ArrayModifierTest.blend](https://archive.blender.org/developer/F12880228/ArrayModifierTest.blend)
Author

Added subscriber: @popqjp

Added subscriber: @popqjp
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.
Antonio Vazquez self-assigned this 2022-02-21 19:36:23 +01:00
Antonio Vazquez changed title from Constant offset works even if disabled in Array modifier for grease pencil to GPencil: Array modifier constant offset works even if disabled if object offset is enabled 2022-02-21 19:44:29 +01:00

This issue was referenced by 49ae0b5b3c

This issue was referenced by 49ae0b5b3c929e91aa9d4292fe9c002c6c9dfe5b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95923
No description provided.