Fix T95923: GPencil Array modifier constant offset works even disabled

The problem was when the Object Offset was enabled because the Constant Offset flag was not checked and the offset always was added to the transformation matrix.