source/blender/gpencil_modifiers/intern/MOD_gpencilarray.c
@@ -120,7 +120,9 @@ static void BKE_gpencil_instance_modifier_instance_tfm(Object *ob,
     float obinv[4][4];
 
     unit_m4(mat_offset);
-    add_v3_v3(mat_offset[3], mmd->offset);
+    if (mmd->flag & GP_ARRAY_USE_OFFSET) {
+      add_v3_v3(mat_offset[3], mmd->offset);
+    }
     invert_m4_m4(obinv, ob->obmat);
 
     mul_m4_series(r_offset, mat_offset, obinv, mmd->object->obmat);
